test/typechecker.d/invalid/fns5.surc.bad
f(x: Integer): Char = 'a'

g(x: Integer): Char = fndo
	return 'a' & f
